<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/colorBGSplash">

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/tv_title_purchase_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_purchase_dialog"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/iv_item"
        android:layout_marginTop="10dp"
        android:src="@drawable/b1"
        android:layout_width="64dp"
        android:layout_height="64dp"/>

    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/tv_price_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price_item"
        android:textColor="@color/white"/>

    <TableRow
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_close_purchase"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/close"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_confirm_purchase"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/confirm"/>
    </TableRow>

</LinearLayout>