<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/et_account"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_acc"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_account"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/button_bg"
        android:text="Đăng nhập"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_text"
        android:textColor="@color/white" />

</RelativeLayout>