<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/arrow_back_ios" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/et_account"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_logo" />
    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/et_password"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_acc"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp" />

    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/hint_password_confirm"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/button_bg"
        android:text="Đăng ký"
        android:textColor="@color/white" />

</RelativeLayout>