<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_splash"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/relativeLayout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_bg_avatar_title"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/ic_play_answer" />

        <ImageView
            android:id="@+id/iv_person"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_rocket" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/iv_person"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_player_name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_player_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_player_level"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/iv_bg_stamina"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_play_answer" />

        <ImageView
            android:id="@+id/iv_money_icon"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_money" />

        <TextView
            android:id="@+id/tv_player_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_badges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_question_player"
        android:clickable="true"
        android:focusable="true"
        android:foregroundGravity="center"
        android:paddingHorizontal="24dp"
        android:paddingTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_money" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_close"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/close"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_badges" />
</androidx.constraintlayout.widget.ConstraintLayout>